--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -1,144 +1,13 @@
 @import "../globals/globals.css";
 
 body {
-    background-color: var(--background);
-    margin: 0;
-    padding: 0;
-    font-family: "work sans", sans-serif;
+    background-color: var(--base-100);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    gap: 10px;
-    width: 100vw;
-    text-align: center;
-}
-
-.title 	{
-    font-size: var(--f5);
-    color: var(--white);
+    max-width: 500px;
     width: 100%;
-    margin-bottom: 20px;
-}
-
-.form-login {
-    display: flex;
-    max-width: 350px;
-    width: 90%;
-    padding: 0;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.form-group {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    margin-inline: 0;
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 15px;
-}
-
-.logo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-input {
-    background-color: var(--darkgray);
-    color: var(--white);
-    border: 1px solid var(--gray);
-    font-size: var(--f2);
-    padding: 20px;
-    border-radius: 5px;
-}
-
-.entrar {
-    background-color: var(--primary);
-    color: white;
-    margin-top: 15px;
-    padding: 15px;
-    font-size: var(--f3);
-    width: 100%;
-    border: none;
-    transition: background-color 0.3s ease-in-out;
-    border-radius: 5px;
-}
-
-.entrar:hover {
-    background-color: var(--tertiary);
-    transition: background-color 0.3s ease-in-out;
-    cursor: pointer;
-}
-
-label {
-    font-size: var(--f2);
-    color: var(--white);
-    margin-bottom: 5px;
-}
-
-.register-link {
-    color: var(--white);
-}
-
-a {
-    color: var(--primary);
-    text-decoration: none;
-    font-size: var(--f2);
-    margin-top: 10px;
-}
-
-.auth {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-    width: 350px;
-    padding-inline: 20px;
-}
-
-.auth .auth-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    transition: 0.3s;
-    padding: 5px;
-    border-radius: 5px;
-    background-color: var(--darkgray);
-    border: 1px solid var(--gray);
-}
-.btn-voltar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #3c38a6;
-    color: white;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    text-decoration: none;
-    margin: 20px;
-    transition: background-color 0.3s ease;
-}
-
-.btn-voltar:hover {
-    background-color: #2d2a7f;
-}
-
-.btn-voltar svg {
-    width: 20px;
-    height: 20px;
-    stroke: white;
-    stroke-width: 2;
-    fill: none;
 }
