--- a/views/freelancers/freelancers.ejs
+++ b/views/freelancers/freelancers.ejs
@@ -85,7 +85,7 @@
         <div class="card-content bg-gray-75 rounded-2xl w-full border border-solid border-gray-50">
           <div class="banner bg-gray-100 rounded-2xl w-full h-full" style="height: 150px; background-position: center; background-image: url('${banner || ''}'); background-size: cover;">
           </div>
-          <div class="w-full items-center flex pd-3 flex-col" style="margin-top: -50px">
+          <div class="w-full items-center flex flex-col" style="margin-top: -50px">
             <div class="profile-pic flex items-center border-4 border-solid border-gray-75 rounded-full overflow-hidden" style="width: 100px; height: 100px;">
               <img src="${foto}" alt="Foto de perfil" onerror="this.src='${anonymousAvatar}'" class="w-full h-full" style="object-fit: cover;">
             </div>
