--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,7 +22,7 @@
         <div class="searchbarContainer">
             <div class="searchbar">
                 <img src="/assets/image/search-icon.svg" alt="searchIcon" class="icon">
-                <input type="text" class="text-xs searchbar-input shadow-0" id="searchInput"
+                <input type="text" class="text-xs searchbar-input shadow-0 text-white" id="searchInput"
                     placeholder="Buscar projeto...">
             </div>
         </div>
