--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
             <a href="/termos">Termos e Condições</a>
             <a href="/privacidade">Privacidade</a>
             <a href="/ajuda">Ajuda</a>
-            <a href="https://workflow-landing-page-livid.vercel.app/" target="_blank" rel="noopener noreferrer">Conheça o projeto</a>
+            <a href="https://workflow-i2gk.onrender.com/" target="_blank" rel="noopener noreferrer">Conheça o projeto</a>
         </div>
     </div>
 </footer>
