banner e foto padrao

--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -19,14 +19,14 @@
 
   <section class="section-1">
     <div class="banner" id="banner">
-      <img id="imgBanner" src="default-banner.jpg" alt="banner" style="cursor:pointer;">
+      <img id="imgBanner" src="/assets/image/bannerpadrao.jpg" alt="banner" style="cursor:pointer;">
     </div>
     <input type="file" id="inputBanner" accept="image/*" style="display:none" />
   </section>
   
   <section class="card-infos pd-3 flex gap-5">
     <div class="profilePic perfilPic overflow-hidden bg-gray-50 border border-solid border-gray-100">
-      <img class="profile-pic" src="default-profile.jpg" alt="pic" style="width: 100%; height: 100%; object-fit: cover;">
+      <img class="profile-pic" src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="pic" style="width: 100%; height: 100%; object-fit: cover;">
     </div>
     <div class="buttonsContainer flex flex-1 flex-row justify-center gap-2">
       <div class="infos flex flex-1 flex-col gap-2 justify-center">
