--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -20,7 +20,12 @@
   <section class="section-1">
     <div class="banner" id="banner">
       <img id="imgBanner" src="/assets/image/bannerpadrao.jpg" alt="banner" style="cursor:pointer;">
+      <div class="banner-hover-content">
+    <img src="/assets/image/sem-foto.png" alt="Sem Foto">
+    <span>Clique para alterar</span>
+</div>
     </div>
+    
     <input type="file" id="inputBanner" accept="image/*" style="display:none" />
   </section>
   
